--- a/src/layouts/root.html
+++ b/src/layouts/root.html
@@ -5,11 +5,13 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{{ title }}}</title>
+	<link rel="icon" href="{{root}}static/images/coffee-fav.png" type="image/png" sizes="16x16">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 	<link rel="stylesheet" href="{{root}}css/merck_styles.css">
 </head>
 <body>
+	<div class="wrapper">
 	{{> header }}
 	{{> body }}
 	{{> footer}}
@@ -21,5 +23,6 @@ $(document).ready(function(){
 	$('#menu').slicknav();
 });
 </script>
+</div>
 </body>
 </html>
