--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,16 +9,16 @@
 		</div>
 		<div class="ccf-contact-social">
 			<div class="ccf-social">
-				<a href="#">
+				<a href="https://www.linkedin.com/company/competition-coffee/" target="_blank">
 					<i class="fab fa-linkedin-in"></i>
 				</a>
-				<a href="#">
+				<a href="https://www.facebook.com/Competition-Coffee-Systems-Inc-287317804641124/" target="_blank">
 					<i class="fab fa-facebook-f"></i>
 				</a>
 			</div>
 			<div class="ccf-contact">
 				<p><a href="./contact.html">Contact Us</a></p>
-				<p>416-429-6111</p>
+				<p><a href="tel:4164296111">416-429-6111</a></p>
 				<p>1111 Finch Avenue West</p>
 				<p>Unit #43</p>
 				<p>Toronto, Ontario M3J 2E5</p>
