--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="cch-contact-menu">
 		<div class="cch-contact">
-			<p>416-429-6111</p>
-			<i class="fas fa-envelope"></i>
+			<p><a href="tel:4164296111">416-429-6111</a></p>
+			<p><a href="mailto:advice@competitioncoffee.com"><i class="fas fa-envelope"></i></a></p>
 		</div>
 		<div class="cch-menu">
 			<nav  id="menu">
