--- a/src/assets/css/templates/footer.css
+++ b/src/assets/css/templates/footer.css
@@ -4,20 +4,22 @@
 	padding: 3% 0;
 
 	.competition-coffee-wrapper {
-		display: flex;
+		display: flex; justify-content: space-between;
 
 		.ccf-logo-info {
 			align-items: center;
 			display: flex;
 
 			img {
-				height: auto;
-				width: 130px;
+				display: block;
+				width: 125px;
+				height: 125px;
+				
 			}
 
 			.ccf-info {
-				left: 3%;
-				position: relative;
+				padding-left: 40px;
+				
 
 				h3 {
 					color: $cc-orange;
@@ -30,7 +32,7 @@
 					color: white;
 					font-size: 18px;
 					line-height: 1.3;
-					padding: 1% 60% 0 0;
+					padding: 0; max-width: 340px;
 				}
 			}
 		}
@@ -39,31 +41,37 @@
 			align-items: center;
 			display: flex;
 			justify-content: space-between;
+			flex: 1 0 auto; max-width: 315px;
 
 			.ccf-social {
 				display: flex;
 				justify-content: space-between;
-				padding-right: 10%;
+				padding-right: 10px;
 				width: 100px;
+				flex: 1 0 auto;
 
 				a {
 					background-color: $cc-orange;
-					border-radius: 25px;
+					border-radius: 50%;
 					color: $cc-brown;
 					display: block;
 					font-family: $font-serif;
 					font-size: 20px;
-					height: 35px;
-					line-height: 1.8;
+					height: 40px;
+					line-height: 40px;
 					text-align: center;
 					width: 40px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					text-decoration: none;
 
 					&:hover {
 						cursor: pointer;
 					}
 
 					&:first-child {
-						margin: 0 10% 0 -10%;
+						margin: 0 5px 0 0;
 						z-index: 10;
 					}
 				}
@@ -76,6 +84,7 @@
 				a{
 					color: $cc-orange;
 				font-size: 20px;
+				text-decoration: none
 				}
 				span {
 					color: white;
