--- a/src/assets/css/templates/homepage.css
+++ b/src/assets/css/templates/homepage.css
@@ -26,15 +26,19 @@
 				}
 
 				a {
-					background-color: $cc-dark-brown;
+					background-color: #605352;
 					color: white;
-					font-family: $font-serif-bold;
-					font-size: 30px;
-					margin-top: 10%;
-					padding: 1% 2%;
+					font-family: 'Klinic Bold', serif;
+					font-size: 22px;
+					margin-top: 4%;
+					/* padding: 1% 2%; */
 					display: inline-block;
 					text-decoration: none;
-					text-transform:uppercase;
+					text-transform: uppercase;
+					width: 175px;
+					height: 45px;
+					text-align: center;
+					line-height: 45px;
 				}
 			}
 
@@ -44,7 +48,8 @@
 				width: 50%;
 
 				img{
-					max-width: 100%
+					max-width: 100%;
+					width: 100%;
 				}
 			}
 		}
@@ -115,17 +120,17 @@
 				}
 
 				.ccho-content-copy-steps {
-					padding-top: 8%;
-					width: 50%;
+					padding-top: 3%;
+					width: 45%;
 				}
 
 				.ccho-content-image--large {
 					height: 100%;
-					padding: 8% 0 0 5%;
-					width: 50%;
+					padding: 4% 0 0 5%;
+					width: 55%;
 
 					img {
-						height: 40%;
+						height: 100%;
 						width: 100%;
 					}
 				}
@@ -136,10 +141,16 @@
 					padding-right: 5%;
 					width: 50%;
 				}
+				.mob-img{
+							display: none; max-width: 100%; height: auto;
+						}
+				.desk-img{
+							display: block;
+						}
 			}
 		}
 	}
-
+	
 	.ccho-brands {
 		padding: 3% 0 0 0;
 
@@ -169,6 +180,7 @@
 				display: flex;
 				flex-wrap: wrap;
 				justify-content: space-between;
+				width: 100%;
 				li{
 					flex: 0 20%;
 					display: flex;
@@ -194,12 +206,14 @@
 			ul{ 
 				display: flex;
 				flex-wrap: wrap;
+				width: 100%;
 				li{
 					flex: 0 33%;
 					display: flex;
 					align-items: center;
-					justify-content: center;
+					justify-content: flex-start;
 					padding: 10px;
+					flex: 1 0 auto;
 					img {
 						max-width: 100%;
     					height: auto;
@@ -262,6 +276,7 @@
 				display: flex;
 				flex-direction: column;
 				padding-top: 3%;
+				flex: 1 1 33%;
 
 				img {
 					display: block;
@@ -285,6 +300,7 @@
 					line-height: 1.3;
 					padding: 0 5%;
 					text-align: center;
+					width: 100%;
 				}
 
 				&:nth-child(2) {
@@ -304,7 +320,7 @@
 
 		.ccho-cta-content-container {
 			background-color: $cc-beige;
-			padding: 10% 2% 0 12%;
+			    padding: 7% 2% 7% 12%;
 			width: 45%;
 
 			p {
@@ -315,24 +331,47 @@
 			}
 
 			a {
-				background-color: $cc-green;
+				background-color: #88c392;
 				color: white;
-				font-family: $font-serif-bold;
-				font-size: 30px;
-				margin-top: 5%;
+				font-family: 'Klinic Bold', serif;
+				font-size: 1.875rem;
+				margin-top: 60px;
 				padding: 2% 5%;
 				text-decoration: none;
 				display: inline-block;
+				width: 245px;
+				height: 53px;
+				text-align: center;
 			}
 		}
 
 		.ccho-cta-image {
-			width: 55%;
+			width: 55%; position: relative; overflow: hidden;
 
 			img {
 				height: 100%;
 				width: 100%;
+				display:block;
+				position: absolute;
+				float: left;
+				left: 0;
+				top: 0;
+				bottom: 0;
+				right: 0;
 			}
 		}
 	}
 }
+
+
+@media only screen and (device-width: 768px) {
+  /* Landscape iPad display */
+ .competition-coffee-homepage .main-carousel .carousel-cell .ccho-carousel-content{
+	       padding: 8% 8% 0 12%;
+    		width: 50%;
+    }
+
+}
+  
+    
+
