--- a/src/assets/css/templates/snacks.css
+++ b/src/assets/css/templates/snacks.css
@@ -184,7 +184,10 @@
       margin-top: 28%;
     }
   }
-  
+  .competition-coffee-about .competition-snacks-wrapper .cca-our-services-image {
+    display: flex;
+    align-items: center;
+}
   .competition-snacks-wrapper .cca-about-content-copy h1:after {
     display: none;
   }
@@ -212,13 +215,21 @@
         font-family: 'Klinic Book', serif;
         font-size: 1.25rem;
         line-height: 1.3;
-        padding-bottom: 3%;
+        /* padding-bottom: 3%; */
       }
       a {
-        color: #706463;
-        font-family: 'Klinic Book', serif;
-        font-size: 1.25rem;
-        text-transform: uppercase;
+            background-color: #605352;
+            color: white;
+            font-family: 'Klinic Bold', serif;
+            font-size: 1.375rem;            
+            /* padding: 1% 2%; */
+            display: inline-block;
+            text-decoration: none;
+            text-transform: uppercase;
+            width: 175px;
+            height: 45px;
+            text-align: center;
+            line-height: 2.8125rem;
       }
       h1 {
         display: block;
